--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -65,6 +65,8 @@ oldUsers <- read.csv.sql(file.path('data', 'users-2016.csv'),
       dbname = tempfile(), header = TRUE)
 ```
 
+And note that one can use `sqldf::read.csv.sql` to avoid reading all the data in from disk.
+
 ### 1.3 Data frames in Python
 
 The Pandas package has nice functionality for doing dataset manipulations akin to SQL queries including group by/aggregation operations, using a data structure called a DataFrame inspired by R's data frames. Furthermore, Pandas was designed from the start for computational efficiency, in contrast to standard data frames in R (but see below for newer R functionality that is much more efficient). 
@@ -84,6 +86,32 @@ users.groupby('age')['upvotes'].agg({'med': 'median', 'avg': 'mean'})
 joined = pd.merge(users, questions, how= 'inner', left_on= 'userid',
         right_on = 'ownerid')
 ```
+
+[Polars](https://docs.pola.rs/user-guide) is a newer dataframe package that provides a Python interface and is designed to be fast. 
+
+Here are some examples:
+
+```{python}
+import polars as pl
+import os
+users = pl.read_csv(os.path.join('data', 'users-2016.csv'))
+tags = pl.read_csv(os.path.join('data', 'questions_tags-2016.csv'))
+questions = pl.read_csv(os.path.join('data', 'questions-2016.csv'))
+type(users)
+users.select(pl.col('userid','upvotes'))   # select columns         
+users.filter(pl.col('upvotes') > 10000)    # filter by row (i.e., sql WHERE)
+# group by (i.e., aggregation)
+tags.groupby('tag').agg(
+        pl.col('*').count().alias('n'))
+tags.groupby('tag').agg(
+        pl.col('*').count().alias('n')).sort('n', descending=True).head(8)
+## Users userid got read in as an integer but Questions ownerid as string.
+users.schema
+users = pl.read_csv(os.path.join('data', 'users-2016.csv'), dtypes = {'userid': str})
+joined = users.join(questions, how= 'inner', left_on= 'userid',
+        right_on = 'ownerid')
+```
+
 
 ### 1.4 Distributed data frames in Dask in Python
 
@@ -192,8 +220,8 @@ library(RSQLite)
 drv <- dbDriver("SQLite")
 db <- dbConnect(drv, dbname = file.path('data', 'stackoverflow-2016.db'))
 users <- tbl(db, 'users')
-oldFolks <- users %>% filter(age > 75)
-head(oldFolks)
+highVotes <- users %>% filter(upvotes > 10000)
+head(highVotes)
 ```
 
 > **Note**: dplyr uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed (in this case when we call `head`).
@@ -254,74 +282,95 @@ system.time(sub <- wikiDT2 %>% filter(count == 512)) # 0.1 sec.
 
 Finally the `tidytable` package also allows you to use dplyr syntax as well as other tidyverse syntax, such as `tidyr` functions. 
 
-### 3.3 Arrow
+### 3.3 Polars dataframes in Python
 
-Apache Arrow provides efficient data structures for working with data in memory, usable in R via the `arrow` package and the `PyArrow` package in Python. Data are stored by column, with values in a column stored sequentially and in such a way that one can access a specific value without reading the other values in the column (O(1) lookup).
+As mentioned earlier, [Polars](https://docs.pola.rs/user-guide) is a newer dataframe package that provides a Python interface, operates in memory, and is designed to be fast. It uses the Arrow columnar format. It also provides a lazy execution model like Spark or Dask that allows for automatic optimization of queries.
 
-Arrow is designed to read data from various file formats, including Parquet, native Arrow format, and text files. In general Arrow will only read data from disk as needed, avoiding keeping the entire dataset in memory. We'll discuss this concept more in the next section.
 
-One can use [dplyr syntax to work with data in the Arrow data structures](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html).
+### 3.4 DuckDB
 
-### 3.4 Polars dataframes in Python
-
-I haven't investigated it, but [Polars](https://pola-rs.github.io/polars-book/user-guide/index.html) is advertized as a very fast in-memory package for working with dataframes that provides a Python interface. It uses the Arrow columnar format. It also provides a lazy execution model like Spark or Dask that allows for automatic optimization of queries.
-
-### 3.5 DuckDB
-
-With DuckDB, you can run queries against existing R and Python data frames and Arrow objects, without having to copy the data or import it into an actual database.
+With DuckDB, you can run queries against existing R and Python data frames, collections of files in the Parquet file format and other file formats, and Arrow objects, without having to copy the data or import it into an actual database.
 
 In R, use the `duckdb_register` and `duckdb_register_arrow` functions to 'register' the data frame or Arrow data source.
 
-For Python, see the [example syntax in the DuckDB documentation](https://duckdb.org/docs/api/python/data_ingestion#dataframes--arrow-tables) to query Pandas and Polars data frames and Arrow objects.
+For Python, see the [example syntax in the DuckDB documentation](https://duckdb.org/docs/api/python/data_ingestion#dataframes-arrow-tables) to query Pandas and Polars data frames and Arrow objects.
+
+Alternatively, you can read the data from files on disk into a DuckDB database table and then run queries against the database you've created.
+
+```{python}
+import duckdb
+data = duckdb.read_parquet("data/*.parquet")
+data.to_table("wikistats")
+duckdb.sql("select * from wikistats limit 5")
+duckdb.sql("select count(*) from wikistats")
+```
+
 
 ## 4 Working with large datasets on disk
 
-There are a variety of packages in R that allow you to work with very large datasets on disk without loading them fully into memory. Some of these are also very good at compressing files to reduce disk storage.
+There are a variety of packages in R and Python that allow you to work with very large datasets on disk without loading them fully into memory. Some of these are also very good at compressing files to reduce disk storage.
 
-I recommend first considering Arrow or fst as they work well with the usual data frame manipulations, but the other packages mentioned here may also be useful.
+I recommend first considering Arrow as it works well with the usual dataframe manipulations, but the other packages mentioned here may also be useful.
 
-And note that one can use `sqldf::read.csv.sql` to avoid reading all the data in from disk.
+### 4.1 Arrow
 
-To illustrate use of these packages, we'll first create a data frame of some of the Wikipedia traffic data, 2.3 GB of data:
+Apache Arrow provides efficient data structures for working with data in memory, usable in R via the `arrow` package and the `PyArrow` package in Python. Data are stored by column, with values in a column stored sequentially and in such a way that one can access a specific value without reading the other values in the column (O(1) lookup).
 
-```{r, fst-prep}
-## read in Wikistats data
-wikiDF <- readr::read_table(file = pipe("gzip -cd data/part-0000?.gz"),
-        col_names = c('day','hour','language','site','hits','size'),
-        col_types = c('nnccnn'))
+In general Arrow will only read data from disk as needed, avoiding keeping the entire dataset in memory (how much has to be read depends on the file format, with the native arrow format best in this regard), which can reduce I/O and memory usage.
+
+You can use Apache Arrow to read and write from datasets stored as one or (often) more files in various formats, including:
+
+  - parquet: a space-efficient, standard format;
+  - arrow format: data are stored in the same format on disk (called the 'feather' format) as in memory, improving I/O speed; and
+  - text/csv files.
+
+See this [very useful discussion](https://stackoverflow.com/questions/56472727/difference-between-apache-parquet-and-arrow) of file formats, comparing the parquet and arrow formats. And note that if you're going to be reading the data frequently off disk, storing the files in text/CSV is not a good idea as it will be much faster to read from the Parquet or Arrow formats. 
+
+Here's a bit of what you can do with the *PyArrow* package for Python, illustrating working with data from a collection of Parquet files.
+
+```{python}
+import pyarrow as pa
+import pyarrow.parquet as pq
+import pyarrow.dataset as ds
+tbl = pq.read_table("data/parquet")
+## alternatively
+
+tbl = tbl.rename_columns(["date","hour","lang","site","hits","size"])
+df = tbl.filter(ds.field('hits') > 10000).to_pandas()
 ```
 
-### 4.1 DuckDB
+For R, there's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html) covering basic usage, which involves dplyr syntax. Here's an example of reading from a single file (at the moment, I'm not seeing how to read from multiple files):
+
+```{r}
+tbl <- read_parquet("data/parquet/part-00000.parquet")
+tbl <- read_feather("data/arrow/part-00000.arrow")
+```
+ 
+### 4.2 DuckDB
 
 With DuckDB, with some file formats (e.g., CSV, Parquet), you can run queries on files on disk without reading the entire dataset into memory.
 
-Alternatively, you can read the data from files on disk into a DuckDB database without storing all the data in memory, and then run queries against the database you've created.
+Here's an example in Python.
 
-
-### 4.2 Arrow
-
-The *arrow* package allows you to read and write from datasets stored as one or (often) more files in various formats, including:
-
-  - parquet: a space-efficient, standard format;
-  - arrow format: data are stored in the same format on disk as in memory, improving I/O speed; and
-  - text/csv files.
-
-After loading the data in (which doesn't initially involve actually reading the data from disk), you can then operate on the resulting object using dplyr syntax. Arrow will only read the data it needs for your computations (how much has to be read depends on the file format, with the native arrow format best in this regard), which can reduce I/O and memory usage.
-
-> **Note**: If you're going to be reading the data frequently off disk, storing the files in text/CSV is not a good idea as it will be much faster to read from the Parquet or Arrow formats.
-
-There's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html) covering basic usage, as well as [this discussion](https://stackoverflow.com/questions/56472727/difference-between-apache-parquet-and-arrow) of file formats.
-
-The *PyArrow* package is available for Python, but I haven't explored it.
+```{python}
+import duckdb
+duckdb.sql("select * from 'data/*.parquet' limit 5")
+duckdb.sql("select count(*) from 'data/*.parquet'")
+df = duckdb.sql("select * from 'data/*.parquet' limit 5").to_df()
+```
 
 ### 4.3 fst
 
 The *fst* package for R provides the ability to quickly read and write data frames in parallel from data stored on disk in the efficient fst format. A key feature in terms of reducing memory use  is that data can be quickly accessed by column or by row (O(1) lookup), allowing one to easily subset the data when reading, rather than reading the entire dataset into memory, which is what would otherwise happen.
 
-Here's an example, starting with an original data frame in R (which might defeat the purpose if the dataset size is too big to fit in memory).
+Here's an example, starting by reading data (some of the Wikipedia traffic data, 2.3 GB of data) into an initial data frame in R (which might defeat the purpose if the dataset size is too big to fit in memory).
 
 
 ```{r, fst-write, eval=FALSE}
+## read in Wikistats data
+wikiDF <- readr::read_table(file = pipe("gzip -cd data/part-0000?.gz"),
+        col_names = c('day','hour','language','site','hits','size'),
+        col_types = c('nnccnn'))
 system.time(write_fst(wikiDF, file.path('/tmp', 'data.fst')))  ## 8.9 seconds
 ```
 
